<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false"
    android:background="#f2efef"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:contentDescription="soslink"
        android:background="#004B35"
        android:layout_marginTop="5dp"
        android:src="@drawable/soslink_logo" />
    <LinearLayout
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>
    <EditText
        android:id="@+id/username"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="4dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/login_ui_user"
        android:textColorHint="#878585"
        android:textColor="#004B35"
        android:singleLine="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/login_edittext" />
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/login_ui_pass"
        android:textColorHint="#878585"
        android:textColor="#004B35"
        android:singleLine="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/login_edittext" />
    <Button
        android:id="@+id/button_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#004B35"
        android:text="@string/button_login"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="18sp" />

</LinearLayout>

