<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="#f2efef">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:contentDescription="soslink"
            android:background="#004B35"
            android:layout_marginTop="5dp"
            android:src="@drawable/soslink_logo" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/tag_viewer_edittext"
            android:weightSum="1">
            <TextView
                android:id="@+id/nfc_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="4dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:autoLink="email|web"
                android:textColor="#004B35"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/tag_viewer_edittext"
            android:weightSum="1">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >
            <Button
                android:layout_weight="1"
                android:id="@+id/qr_code"
                android:onClick="scanCustomScanner"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="#004B35"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:text="@string/button_1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >
            <Button
                android:layout_weight="1"
                android:id="@+id/main_checkin"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="#009900"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:text="@string/button_31"/>
            <Button
                android:layout_weight="1"
                android:id="@+id/main_checkout"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#FF0000"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:text="@string/button_32"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:layout_weight="1"
                android:id="@+id/main_check"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="#004B35"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:text="@string/button_33"/>
            <Button
                android:layout_weight="1"
                android:id="@+id/main_register"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#004B35"
                android:text="@string/button_14"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/main_ocorrencias"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="#009688"
                android:text="@string/button_5"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textStyle="bold" />
            <Button
                android:layout_weight="1"
                android:id="@+id/main_logout"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#004B35"
                android:text="@string/button_6"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/site_name_tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="15dp"
            android:padding="4dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:autoLink="email|web"
            android:text=""
            android:textColor="#ffffff"
            android:background="#004B35"
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>